# job-etl-project

./: .commit_msg.txt  .cursorrules  .env.example  .gitignore  AGENTS.md  CODE_REVIEW.md  CODE_REVIEW_MULTIPLE_PREFERENCES.md  CODE_REVIEW_RANKING_EXPLANATION.md  CODE_REVIEW_RANKING_EXPLANATION_FIXED.md  CODE_REVIEW_comprehensive.md  CODE_REVIEW_duplicate_fix.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  README.md  SETUP.md  SETUP_VERIFICATION.md  TEST_DBT_SETUP.md  VERIFICATION_CHECKLIST.md  VERIFICATION_SUMMARY.md  ci_errors.json  ci_jobs.json  ci_logs_latest.txt  ci_logs_latest_11.txt  ci_logs_latest_6.txt  ddl_all_tables.sql  docker-compose.production.yml  docker-compose.staging.yml  docker-compose.yml  env.template  pyproject.toml  requirements.txt
.archive/: FIREFOX_FIX.md  MIGRATION_NEXT_STEPS.md  TESTING_COMPLETE.md  TESTING_FINAL.md  TESTING_RESULTS.md  TESTING_SUMMARY.md  UI_UX_REVIEW.md  UI_UX_TESTING_REPORT.md  code_review_cover_letter_generation.md
.cursor/: Dockerfile  environment.json
Project Documentation/: glassdoor_companies.md  implementation-todo.md  job-postings-prd.md  jsearch.md  naming_conventions.md
airflow/: Dockerfile
backend/: Dockerfile  app.py  config.py  figma_design_spec.md
campaign_ui/: Dockerfile  UI Description.docx  app.py  requirements.txt
dbt/: .user.yml  dbt_project.yml  profiles.staging.yml
docs/: CLEANUP_ORPHANED_RANKINGS_STRATEGY.md  CODE_REVIEW_profile_specific_filtering.md
frontend/: README.md  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
profile_ui/: Dockerfile  app.py  requirements.txt
project_documentation/: CAMPAIGN_DELETION_FIX_REPORT.md  CAMPAIGN_DELETION_STRATEGY.md  CAMPAIGN_ID_FIX.md  CHATGPT_ENRICHMENT_VERIFICATION.md  CLEANUP_ORPHANED_RANKINGS_STRATEGY.md  JOB_STATUS_CODE_REVIEW.md  UI_UX_REVIEW.md  agent-workflow.md  bugs-todo.md  commercial-roadmap.md  cursor-cloud-agents-setup.md  deployment-environments.md  deployment-production.md  deployment-staging.md  etl_pipeline_data_flow.dbml  etl_pipeline_flow.md  etl_pipeline_flow_diagram.mmd  implementation-todo.md  job-postings-prd.md  staging-slots.md  (+10 more)
(+458 files in other folders)
