[project]
name = "job-search-platform"
version = "0.1.0"
description = "Job Postings Data Platform - A data engineering project for extracting, transforming, and ranking job postings"
requires-python = ">=3.11"
dependencies = [
    "psycopg2-binary>=2.9.9",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "sqlalchemy>=2.0.0",
    "pandas>=2.1.0",
    "spacy>=3.7.0",
    "rapidfuzz>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = [
    ".cursor",
    ".vscode",
    "AppData",
    "Desktop",
    "archive",
    "**/__pycache__",
    "**/htmlcov",
    "**/target",
    "**/logs",
    "**/dbt_packages",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "E402",  # module import not at top (needed for Airflow DAGs with sys.path modifications)
    "B008",  # do not perform function calls in argument defaults
    "B027",  # empty method in abstract base class (intentionally empty for optional super().__init__())
    "B905",  # zip() without strict=True (database cursors guarantee matching lengths)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
pythonpath = ["."]
addopts = [
    "--strict-markers",
    "--cov=services",
    "--cov-report=term-missing",
    "--cov-report=html",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow running tests",
]

